tests/ui/field_representing_types/sized.old.stderr
error[E0277]: the trait bound `field_of!(Generic<T>, count): std::field::Field` is not satisfied
  --> $DIR/sized.rs:20:19
   |
LL |     impls_field::<field_of!(Generic<T>, count)>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the nightly-only, unstable trait `std::field::Field` is not implemented for `field_of!(Generic<T>, count)`
   |
note: required by a bound in `impls_field`
  --> $DIR/sized.rs:38:19
   |
LL | fn impls_field<F: Field>() {}
   |                   ^^^^^ required by this bound in `impls_field`

error[E0277]: the trait bound `field_of!(Generic<T>, last): std::field::Field` is not satisfied
  --> $DIR/sized.rs:22:19
   |
LL |     impls_field::<field_of!(Generic<T>, last)>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the nightly-only, unstable trait `std::field::Field` is not implemented for `field_of!(Generic<T>, last)`
   |
note: required by a bound in `impls_field`
  --> $DIR/sized.rs:38:19
   |
LL | fn impls_field<F: Field>() {}
   |                   ^^^^^ required by this bound in `impls_field`

error[E0277]: the trait bound `field_of!(MyDST, count): std::field::Field` is not satisfied
  --> $DIR/sized.rs:32:19
   |
LL |     impls_field::<field_of!(MyDST, count)>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^ the nightly-only, unstable trait `std::field::Field` is not implemented for `field_of!(MyDST, count)`
   |
note: required by a bound in `impls_field`
  --> $DIR/sized.rs:38:19
   |
LL | fn impls_field<F: Field>() {}
   |                   ^^^^^ required by this bound in `impls_field`

error[E0277]: the trait bound `field_of!(MyDST, last): std::field::Field` is not satisfied
  --> $DIR/sized.rs:34:19
   |
LL |     impls_field::<field_of!(MyDST, last)>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^ the nightly-only, unstable trait `std::field::Field` is not implemented for `field_of!(MyDST, last)`
   |
note: required by a bound in `impls_field`
  --> $DIR/sized.rs:38:19
   |
LL | fn impls_field<F: Field>() {}
   |                   ^^^^^ required by this bound in `impls_field`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
